--- a/templates/index.html
+++ b/templates/index.html
@@ -75,12 +75,10 @@
                         <h1> Getting to Know! </h2>
                         <p> #1: Add your text inside the text box to check your grammar.</p> 
                         <p> #2: A message will appear on the loading box .</p>
-                        <p> #3: If you're planning to input 2 or more sentences</p>
-                        <i> *Remember! All sentences should end with a period.*</i>
-                        <p> #4: A word/s will be highlighted for any incorrect spelling. You can click on it to see any suggestions! If you want to remove the suggestion box just click the box again.</p>
+                        <p></p>
+                        <p> #3: A word/s will be highlighted for any incorrect spelling. You can move your mouse to see any suggestions!</p>
                         <i> *Note: The suggestions listed can't be clicked, its just there to give suggestions.*</i><br>
-                        <i> Test for yourself by trying to input <br> "Ako ay may lobo."</i><br>
-                        <i> Then try <br> "Lumipad sa langit."</i> <br>
+
                         <i> *Note: This webapp is for testing and research purposes ONLY. It is not a full-time webapp.*</i>
                     </div>
                 </div>
