--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,8 @@
                         <div id="correctionsContent"></div>
                         <h3 id="suggestionsHeader" class="hidden">Suggestions:</h3>
                         <div id="suggestionsContent"></div> 
+                        <div id="correctedText"></div>
+
                     </div>                    
                     <div class = "info-container">
                         <h1> Getting to Know! </h1>
