--- a/static/styles.css
+++ b/static/styles.css
@@ -6,9 +6,26 @@
     box-sizing: border-box;
 }
 
+:root{
+    --pwhite: #FAF9F6;
+    --pmaroon: #650000;
+    --plyellow: #F6E2A5;
+    --pbblack: #5B2B12;
+    --bgcolor: #E5E0DF;
+    --pyellow: #EEBA2B;
+    --pbrown: #764B36;
+    --pgray:#7c7573;
+}
+
 html {
     scroll-behavior: smooth;
 }
+
+#charCount {
+    color: #7c7573;
+    transition: color 0.3s; /* Smooth transition between colors */
+}
+
 
 #skiptranslate {
     visibility: none;
@@ -16,14 +33,15 @@ html {
 
 body {
     font-family: 'Montserrat';
-    background-color: #E5E0DF;
+    color:  var(--pbblack);
+    background-color: var(--bgcolor);
 }
 /*-----Home-----*/
 #Home {
 
     width: 100%;
     height: 100vh;
-    background:  linear-gradient(#fefaf6, #eadbc8);
+    background:  linear-gradient(var(--pwhite), var(--bgcolor));
     background-size: cover;
     background-position: center;
     background-image: url('assets/bg.png'); 
@@ -34,15 +52,49 @@ body {
 .nav {
     width: 100%;
     height: 80px;
-    background: #650000;
     position: fixed;
     top: 0;
     z-index: 1000;
-    color: #fefaf6;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
+    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for color change */
+}
+
+/* Horizontal Line Below Navigation */
+.nav::after {
+    content: '';
+    display: block;
+    width: 90%; /* Adjust width to 80-90% */
+    height: 1px;
+    background-color: currentColor; /* Color can change based on the page */
+    margin: 0 auto;
+    position: absolute;
+    bottom: 0;
+    left: 5%; /* Center the line */
+}
+
+/* White text for the homepage */
+.nav.white {
+    color: var(--pwhite);  /* White text on home page */
+}
+
+/* Black text for other pages */
+.nav.black {
+    color: var(--pbblack); /* Black text on other pages */
+}
+
+/* Navbar with white text */
+.nav.white a {
+    color: inherit;  /* Inherit white color from the .nav.white class */
+    text-decoration: none;  /* No underline */
+}
+
+/* Navbar with black text */
+.nav.black a {
+    color: inherit;  /* Inherit black color from the .nav.black class */
+    text-decoration: none;  /* No underline */
 }
 
 /*Section Style*/
@@ -93,11 +145,11 @@ section .home-content{
     font-style: normal; 
 }
 
-label.logo {
+a:label.logo {
     float: left;
     width: 30px;
     font-family: 'Roxborough CF';
-    color: #fefaf6;
+    color: currentColor;
     font-size: 30px;
     line-height: 80px;
     font-weight: bold;
@@ -124,11 +176,10 @@ label.logo {
 }
 
 .nav ul li a {
-    color: #fefaf6;
+    color: currentColor;
     font-size: 20px;
     padding: 10px 20px;
-    text-transform: uppercase;
-    font-weight: bold;
+    text-transform: capitalize;
     display: block;
     text-decoration: none;
 }
@@ -137,7 +188,7 @@ label.logo {
     content: '';
     height: 3px;
     width: 0;
-    background: #eadbc8;
+    background: var(--bgcolor);
     position: absolute;
     left: 0;
     bottom: 30px;
@@ -150,7 +201,7 @@ label.logo {
 
 .checkbtn {
     font-size: 30px;
-    color: white;
+    color: var(--pwhite);
     position: fixed;
     right: 30px;
     cursor: pointer;
@@ -159,7 +210,7 @@ label.logo {
 
 .exitbtn {
     font-size: 30px;
-    color: white;
+    color: var(--pwhite);
     position: fixed;
     right: 30px;
     cursor: pointer;
@@ -192,7 +243,6 @@ label.logo {
         position: fixed;
         width: 100%;
         height: 100%;
-        background: #650000;
         top: 0px;
         left: -100%;
         padding-top: 80px;
@@ -221,7 +271,7 @@ label.logo {
     }
     
     .exitbtn:hover {
-        border: 1px solid white;
+        border: 1px solid var(--pwhite);
         padding: 5px 10px;
     }
 
@@ -272,7 +322,7 @@ label.logo {
     font-size: 75px;
     margin-bottom: 10px;
     font-weight: 700px;
-    color: #ffffff;
+    color: var(--pwhite);
     text-shadow: 8px 9px 12.3px rgba(0, 0, 0, 0.8);
 }
 
@@ -283,7 +333,7 @@ label.logo {
     margin-bottom: 20px;
     font-style: italic;
     font-weight: lighter;
-    color: #ffffff;
+    color: var(--pwhite);
 }
 
 @media (max-width: 858px) {
@@ -321,8 +371,8 @@ label.logo {
     font-size: 30px;
     border: none;
     outline: none;
-    background: white;
-    color: #650000;
+    background: var(--pwhite);
+    color: var(--pmaroon);
     cursor: pointer;
     position: relative;
     overflow: hidden;
@@ -330,7 +380,7 @@ label.logo {
 }
 
 .button span {
-    background: #650000;
+    background: var(--pmaroon);
     height: 100%;
     width: 0;
     border-radius: 25px;
@@ -346,8 +396,8 @@ label.logo {
 }
 
 .button:hover {
-    color: white;
-    background: #650000;
+    color: var(--pwhite);
+    background: var(--pmaroon);
 }
 
 @media (max-width: 700px) {
@@ -368,9 +418,8 @@ label.logo {
         border-radius: 25px;
         font-weight: bold;
         font-size: 20px;
-        border: 2px solid #650000;
-        background: white;
-        color: #650000;
+        background-color: var(--pwhite);
+        color: var(--pmaroon);
         cursor: pointer;
         position: relative;
         overflow: hidden;
@@ -378,7 +427,7 @@ label.logo {
     }
 
     #Home .button span {
-        background: #650000;
+        background: var(--pmaroon);
         height: 100%;
         width: 0;
         border-radius: 25px;
@@ -394,8 +443,8 @@ label.logo {
     }
     
     #Home .button:hover {
-        color: white;
-        background: #650000;
+        color: var(--pwhite);
+        background: var(--pmaroon);
     }
 }
 
@@ -403,7 +452,7 @@ label.logo {
 #About {
     width: 100%;
     height: 100vh;
-    background-color: #E5E0DF;
+    background-color: var(--bgcolor);
     background-size: cover;
     background-position: center;
 }
@@ -416,7 +465,7 @@ label.logo {
     top: 25vh;
     left: 0%;
     padding-top: 20px;
-    background-color: rgba(255, 255, 255, 0.8); 
+    background-color: var(--pwhite); 
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 }
@@ -494,7 +543,6 @@ label.logo {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20px; /* Add space between corrected sentence and spinner */
 }
 
 .loading p {
@@ -502,8 +550,8 @@ label.logo {
 }
 
 .spinner {
-    border: 8px solid #f3f3f3; /* Light grey */
-    border-top: 8px solid #3498db; /* Blue */
+    border: 8px solid var(--bgcolor);
+    border-top: 8px solid var(--pyellow);
     border-radius: 50%;
     width: 60px;
     height: 60px;
@@ -516,7 +564,7 @@ label.logo {
 }
 
 .error {
-    background-color: rgb(192, 149, 56);
+    background-color: var(--plyellow);
     cursor: pointer;
 }
 
@@ -529,7 +577,6 @@ label.logo {
     border-spacing: 10px;
     border: none;
     outline: none;
-    border: 1px solid #650000;
     box-sizing: border-box;
     resize: none;
     margin-bottom: 20px;
@@ -556,20 +603,19 @@ label.logo {
 }
 
 .highlight {
-    background-color: yellow;
+    color: var(--pyellow);
     font-weight: bold;
     cursor: pointer;
 }
 
 #error {
-    color: yellow;
+    color: var(--pyellow);
     cursor: pointer;
 }
 
 #suggestionsList {
     list-style-type: none;
     padding-left: 0;
-   /* border: 1px solid #650000;*/
     min-height: 100px;
     padding: 10px;
     box-sizing: border-box;
@@ -578,7 +624,7 @@ label.logo {
 
 #suggestionsList li {
     cursor: pointer;
-    color: brown;
+    color: var(--pbrown);
 }
 
 #suggestionsList li:hover {
@@ -588,9 +634,8 @@ label.logo {
 #correctedText {
     flex: 1;
     padding-left: 20px;
-    /*border-left: 1px solid #650000;*/
     font-style: italic;
-    color: grey;
+    color: var(--pgray);
     font-family: 'Sorts Mill Goudy';
 }
 
@@ -644,7 +689,7 @@ label.logo {
     }
 
     .logo{
-        margin-left: 30px;
+        margin-left: 35px;
     }
 }
 
@@ -841,8 +886,8 @@ label.logo {
 .Footer {
     width: 100%;
     height: 10%;
-    background: #650000;
-    color: #fefaf6;
+    background: var(--pmaroon);
+    color: var(--pwhite);
     padding: 10px;
     text-align: center;
     z-index: 100;
@@ -862,7 +907,7 @@ label.logo {
 
 .left-panel, .right-panel {
     flex: 1;
-    background-color: white;
+    background-color: var(--pwhite);
     padding: 20px;
     box-sizing: border-box;
 }
@@ -891,7 +936,7 @@ label.logo {
 
 #grammarTextarea:empty:before {
     content: attr(data-placeholder);
-    color: grey;
+    color: var(--pgray);
     pointer-events: none;
     display: block;
 }
