--- a/static/styles.css
+++ b/static/styles.css
@@ -201,7 +201,7 @@ a:label.logo {
 
 .checkbtn {
     font-size: 30px;
-    color: var(--pwhite);
+    color: currentColor;
     position: fixed;
     right: 30px;
     cursor: pointer;
@@ -210,7 +210,7 @@ a:label.logo {
 
 .exitbtn {
     font-size: 30px;
-    color: var(--pwhite);
+    color: currentColor;
     position: fixed;
     right: 30px;
     cursor: pointer;
@@ -237,6 +237,15 @@ a:label.logo {
     .checkbtn {
         display: block;
         z-index: 100;
+    }
+
+    .nav.white ul{
+        background-color: rgba(69, 67, 66, 0.80);
+    }
+    
+    /* Black text for other pages */
+    .nav.black ul{
+        background-color: rgba( 229, 224, 223, 0.80);
     }
 
     .nav ul {
@@ -271,7 +280,6 @@ a:label.logo {
     }
     
     .exitbtn:hover {
-        border: 1px solid var(--pwhite);
         padding: 5px 10px;
     }
 
