--- a/static/styles.css
+++ b/static/styles.css
@@ -188,7 +188,7 @@ a:label.logo {
     content: '';
     height: 3px;
     width: 0;
-    background: var(--bgcolor);
+    background: currentColor;
     position: absolute;
     left: 0;
     bottom: 30px;
