--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
                         <div class="textArea-container">
                             <form id="grammarForm" onsubmit="return false;">
                                 <div id="grammarTextarea" contenteditable="true"  maxlength="150" oninput="updateCharacterCount()" data-placeholder="Type your text here..." style="width: 100%; height: 350px; margin-bottom: 0; padding: 10px; font-size: 28px; border: none; outline: none; box-sizing: border-box;"></div>
+                                <p id="charCount">0/150</p>
                             </form>
                         </div>
                         <div id="suggestionsContent">
