addedd banner and logo change

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,8 @@
     <!--Home-->
     <section id = "Home">
         <div class = "home-content">
-            <h1 class="welcome-text"> PANTASA: Advance Tagalog Grammar Error Checker </h1>
+            <img src="{{ url_for('static', filename='assets/pantasa.png') }}" alt="Logo" class="hero">
+            <h1 class="welcome-text">Tagalog Grammar Error Checker </h1>
             <p> Your Tagalog grammar buddy. </p>
                 <div>
                     <li><a href = "#GrammarChecker" ><button type = "button" class = "button" onclick = "showSection('GrammarChecker')"><span></span> Try it now </button></a></li>
